# test-ci-cd

./: .gitignore  README.md  core.py  pyproject.toml
.github/workflows/: ci.yml  format.yml  lint.yml
tests/: test_ci.py
