[tool.poetry]
name = "test-ci-cd"
version = "0.1.0"
description = ""
authors = ["SergeyKapshuchenko <serg3y1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py"]
addopts = "-rA -q -p no:warnings --show-capture=no"
